tests/ui/diagnostic-not-implemented-immutable.msrv.stderr
error[E0277]: the trait bound `NotZerocopy: Immutable` is not satisfied
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/diagnostic-not-implemented-immutable.rs:16:23
   |
16 |     takes_immutable::<NotZerocopy>();
   |                       ^^^^^^^^^^^ the trait `Immutable` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_immutable`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/diagnostic-not-implemented-immutable.rs:19:23
   |
19 | fn takes_immutable<T: Immutable>() {}
   |                       ^^^^^^^^^ required by this bound in `takes_immutable`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
